update web/rest, update README.adoc with more recent test results